--- a/AlmedalGameStore.Models/AlmedalGameStore.Models.csproj
+++ b/AlmedalGameStore.Models/AlmedalGameStore.Models.csproj
@@ -8,6 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AlemedalGameStore.Utility\AlemedalGameStore.Utility.csproj" />
   </ItemGroup>
 
 </Project>
