--- a/AlmedalGameStoreWeb/appsettings.json
+++ b/AlmedalGameStoreWeb/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:fraje-sql-srv.database.windows.net,1433;Initial Catalog=AlmedalGameStore;Persist Security Info=False;User ID=Fraje;Password=Gjp46400;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  "KeyVaultSecrets": {
+    "SqlConnection": "https://ags-iths.vault.azure.net/secrets/ConnectionString-AGS/d52cc1e4d1b5402d8185684496454f0a"
   }
 }
