Gustav & Jonas added logic to empty cart after order is sent.

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,4 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/AlmedalGameStoreWeb/wwwroot/images/products/b13a9ae5-309b-41ca-bde2-13148a120c4b.jpg
